comment out part 2 lines

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,12 @@
 version: 0.2
 
 phases:
-  install:
-    commands:
-    - rm package-lock.json
-    - npm install --silent --no-progress -g npm
-    - npm install --silent --no-progress -g serverless
-    - npm --version
+  #install:
+    #commands:
+    #- rm package-lock.json
+    #- npm install --silent --no-progress -g npm
+    #- npm install --silent --no-progress -g serverless
+    #- npm --version
   pre_build:
     commands:
     - npm install --silent --no-progress
@@ -14,13 +14,13 @@ phases:
     commands:
     - npm run-script lint
     - npm run test
-    - mkdir -p target/stg
-    - mkdir target/prod
-    - serverless package --package target/stg --stage stg -v -r eu-central-1
-    - serverless package --package target/prod --stage prod -v -r eu-central-1
+    #- mkdir -p target/stg
+    #- mkdir target/prod
+    #- serverless package --package target/stg --stage stg -v -r eu-central-1
+    #- serverless package --package target/prod --stage prod -v -r eu-central-1
 
-artifacts:
-  files:
-  - target/**/*
-  - serverless.yml
-  - deploy.sh
+#artifacts:
+  #files:
+  #- target/**/*
+  #- serverless.yml
+  #- deploy.sh
